hphp/test/zend/bad/ext/phar/tests/bug60261.php
<?php

$nx = new Phar();
try {
	$nx->getLinkTarget();
} catch (Exception $e) {
	echo $e->getMessage(), "\n";
}

?>